# typic

./: .gitignore  0000-safer_transmute.md  CHANGELOG.md  Cargo.toml  README.md  release.toml
typic/: Cargo.toml  release.toml
typic-derive/: Cargo.toml
typic-derive/src/: lib.rs  synstructure.rs
typic/src/: alignedto.rs  bytelevel.rs  highlevel.rs  hir.rs  hir_into_mir.rs  hlist.rs  layout.rs  lib.rs  mir.rs  mir_convert.rs  num.rs  target.rs  transmutation.rs  transmute.rs
typic/src/bytelevel/: ops.rs  slot.rs
typic/src/bytelevel/slot/: bytes.rs  reference.rs
typic/src/highlevel/: padding.rs  product.rs
typic/src/layout/: aligned_to.rs  into_bytelevel.rs  padding.rs  test.rs
typic/src/layout/into_bytelevel/: field.rs  primitives.rs  product.rs
typic/src/private/: bytelevel.rs  highlevel.rs  layout.rs  num.rs  stability.rs  target.rs  transmute.rs
typic/src/private/bytelevel/: ops.rs  slot.rs
typic/src/private/bytelevel/slot/: array.rs  bytes.rs  reference.rs
typic/src/private/highlevel/: coproduct.rs  field.rs
typic/src/private/layout/: aligned_to.rs  into_bytelevel.rs  padding.rs  test.rs
typic/src/private/layout/into_bytelevel/: field.rs  primitives.rs  product.rs
typic/src/private/transmute/: from_layout.rs  from_type.rs  neglect.rs
typic/src/private/transmute/from_layout/: consume.rs  flatten.rs
typic/src/transmute/: from_layout.rs  from_type.rs  safe_transmutation.rs  unsafe_transmutation.rs
typic/src/transmute/from_layout/: consume.rs  equivalent.rs  experiment.rs  flatten.rs  subsumes.rs
typic/src/transmute/from_type/: equivalent.rs  subsumes.rs
typic/tests/: derive.rs  enums.rs  invariants_opaque.rs  invariants_transparent.rs  nested_structures.rs  padding_bytes.rs  pointer_alignment.rs  pointer_conversion.rs  sizes_same.rs  transmute.rs  transmute_stress.rs  unions.rs
