[package]
name = "typic-derive"
version = "0.1.0"
authors = ["Jack Wrenn <me@jswrenn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jswrenn/typic"
description = "Type-safe transmutations between layout-compatible types."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]
