[package]
name = "typic-derive"
version = "0.2.0"
authors = ["Jack Wrenn <me@jswrenn.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jswrenn/typic"
description = "Type-safe transmutations between layout-compatible types."
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
if_chain ="1.0"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full", "extra-traits", "visit"]
