[package]
name = "typic"
version = "0.2.1"
authors = ["Jack Wrenn <me@jswrenn.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jswrenn/typic"
description = "Type-safe transmutations between layout-compatible types."
readme = "../README.md"
categories = ["rust-patterns"]

[dependencies]
static_assertions = "1.1.0"
typenum = "1.10.0"
typic-derive = { version = "^0.2.0", path = "../typic-derive" }

[dev-dependencies]
static_assertions = "1.1.0"
