[package]
name = "typic"
version = "0.2.2"
authors = ["Jack Wrenn <me@jswrenn.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jswrenn/typic"
description = "Type-safe transmutations between layout-compatible types."
readme = "../README.md"
categories = ["rust-patterns", "no-std"]

[dependencies]
typenum = "1.10.0"
typic-derive = { version = "^0.2.0", path = "../typic-derive" }
generic-array = "0.13.2"

[dev-dependencies]
static_assertions = "1.1.0"
